# mercury_build

./: .gitignore  gitpush_v210.sh  hg_bulk_s.sh  readme  readme_xb  rsync_bulk.sh  rsync_daos.sh  update_from_upstream.sh
mercury/04_args/: client.c
mercury/05_bulk/: 05_hg_client  05_hg_server  CMakeCache.txt  CMakeLists.txt  Makefile  c.sh  client.c  cmake_install.cmake  rsync.sh  s.sh  server.c
src/: mercury_core_types.h
src/na/: na_types.h
